added routes for find all accounts of user and delete account
